# Hackaton-MF-2025

./: .gitignore  README.md  main.py  pyproject.toml
notebooks/: 12-01-virtualizarr-remote-object-store.ipynb  12-02-compute-climate-indicators.ipynb  12-02-decompress-files.ipynb  12-02-import-anastasia.ipynb  12-02-import-rcm.ipynb  12-02-import-safran.ipynb  12-03-combine-data_indicator.ipynb  12-03-extract-location-data.ipynb  12-03-process-data.ipynb  12-03-read_data.ipynb
